documentacion/obtenida/ARINC 429/driver and software/LX1553-3/API/L13W32NET.CS


        [DllImport("L13W32.DLL", EntryPoint = "_L13_BCConfig@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_BCConfig(UInt32 configval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BCCreateList@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_BCCreateList(UInt32 listconfigval, Int32 count, UInt32 msgconfigval, UInt16 cwd1, UInt16 cwd2, ref UInt16 data, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BCCreateMsg@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_BCCreateMsg(UInt32 configval, UInt16 cwd1, UInt16 cwd2, ref UInt16 data, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BCSchedFrame@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_BCSchedFrame(UInt32 timeval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BCSchedMsg@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_BCSchedMsg(UInt32 msgaddr, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BCSchedRetry@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_BCSchedRetry(UInt16 condition, UInt16 retries, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BCTransmitMsg@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_BCTransmitMsg(ref XMITFIELDS xmitfieldsval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BCTransmitMsgEx@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_BCTransmitMsgEx(ref XMITFIELDS xmitfieldsval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CardClose@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_CardClose(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CardOpen@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_CardOpen(Int32 cardnum);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CardReset@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_CardReset(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CardStart@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_CardStart(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CardStop@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_CardStop(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_ErrorCtrl@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_ErrorCtrl(UInt32 ctrlval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_ErrorDefine@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_ErrorDefine(UInt32 defineval, UInt16 errvalue, Int32 countval, UInt16 wordpos, UInt16 bitpos, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_ErrorSent@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_ErrorSent(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_ErrorTagBC@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_ErrorTagBC(Int32 tagval, UInt32 msgaddr, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_ErrorTagRT@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_ErrorTagRT(Int32 tagval, Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_IntConfig@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_IntConfig(UInt16 configval, UInt16 count, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_ListDataRd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_ListDataRd(ref UInt16 buf, Int32 count, UInt32 listaddr, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_ListDataWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_ListDataWr(ref UInt16 buf, Int32 count, UInt32 listaddr, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_MonConfig@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_MonConfig(UInt32 configval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_MonFilterSA@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_MonFilterSA(Int32 taval, UInt32 rcvsamask, UInt32 xmtsamask, UInt32 rcvmcmask, UInt32 xmtmcmask, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_MonFilterTA@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_MonFilterTA(UInt32 tamask, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_MonIsRunning@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_MonIsRunning(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_MonRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_MonRd(ref UInt16 buf, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_MsgDataRd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_MsgDataRd(ref UInt16 buf, Int32 count, UInt32 msgaddr, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_MsgDataWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_MsgDataWr(ref UInt16 buf, Int32 count, UInt32 msgaddr, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_MsgFieldRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_MsgFieldRd(UInt16 fieldtype, UInt32 msgaddr, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_MsgFieldWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_MsgFieldWr(UInt32 fieldval, UInt16 fieldtype, UInt32 msgaddr, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_PlayConfig@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_PlayConfig(UInt32 configval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_PlayWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_PlayWr(ref UInt16 buf, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_RTConfig@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_RTConfig(UInt32 configval, Int32 taval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_RTCreateList@32", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_RTCreateList(UInt32 listconfigval, Int32 count, UInt32 msgconfigval, Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_RTCreateMsg@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_RTCreateMsg(UInt32 configval, Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_RTGetMsg@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_RTGetMsg(Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_RTSWDWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_RTSWDWr(UInt16 swdval, Int32 taval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_ValPackCWD@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_ValPackCWD(Int32 taval, Int32 trflag, Int32 saval, Int32 wcval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_ValUnpackCWD@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_ValUnpackCWD(UInt16 cwdval, ref Int32 taval, ref Int32 trflag, ref Int32 saval, ref Int32 wcval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_AddrDSP@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_AddrDSP(UInt32 addr);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_AddrHost@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_AddrHost(UInt32 addr);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BCConfigEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_BCConfigEx(UInt32 configval, UInt16 count, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BCConfigMsg@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_BCConfigMsg(UInt32 configval, UInt32 msgaddr, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BCCreateListEx@32", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_BCCreateListEx(UInt32 listconfigval, Int32 skipval, Int32 count, UInt32 msgconfigval, UInt16 cwd1, UInt16 cwd2, ref UInt16 data, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BCCreateListExx@32", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_BCCreateListExx(UInt32 listconfigval, Int32 skipval, Int32 count, UInt32 msgconfigval, UInt16 cwd1, UInt16 cwd2, ref UInt16 data, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BCGetMsg@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_BCGetMsg(Int32 index, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BCSchedAgain@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_BCSchedAgain(Int32 index, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BCSchedBranch@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_BCSchedBranch(UInt16 condition, Int32 destindex, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_BCSchedBranchDin0@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_BCSchedBranchDin0(Int32 destindex, UInt32 handleval);
